--- a/a2/q7.ipynb
+++ b/a2/q7.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 108,
    "id": "455915f5",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 109,
    "id": "a5bb3dfc",
    "metadata": {},
    "outputs": [
@@ -89,7 +89,7 @@
        "1980-04-01        34.13257"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 110,
    "id": "46efcc73",
    "metadata": {},
    "outputs": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 111,
    "id": "dab76dc5",
    "metadata": {},
    "outputs": [
@@ -250,7 +250,7 @@
        "1980-03-01        33.79504  3.520314   0.013828"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 112,
    "id": "175b0ae9",
    "metadata": {},
    "outputs": [
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 118,
    "id": "c00b8966",
    "metadata": {},
    "outputs": [
@@ -351,20 +351,11 @@
       "step: 2 acf: -0.0021077338404132473\n",
       "step: 3 acf: 0.01948332931244896\n",
       "step: 4 acf: -0.026882780485939197\n",
-      "step: 5 acf: -0.029940389364060845\n",
-      "step: 6 acf: -0.006028144800107124\n",
-      "step: 7 acf: -0.02433066007971615\n",
-      "step: 8 acf: -0.019787586005444384\n",
-      "step: 9 acf: -0.01599545600295471\n",
-      "step: 10 acf: -0.022063238170644865\n",
-      "step: 11 acf: -0.042080791072408225\n",
-      "step: 12 acf: -0.003185510040959444\n",
       "step: 13 acf: -0.04793527901893195\n",
       "step: 14 acf: -0.049116215384615594\n",
       "step: 15 acf: 0.12484265709845116\n",
       "step: 16 acf: 0.033743103906583485\n",
-      "step: 17 acf: 0.05285856585570968\n",
-      "step: 18 acf: -0.0017777511061960374\n"
+      "step: 17 acf: 0.05285856585570968\n"
      ]
     }
    ],
@@ -398,7 +389,8 @@
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
-    "for x in range(1, 19):\n",
+    "xs = list(range(1, 5)) + list(range(13, 18))\n",
+    "for x in xs:\n",
     "    print(\"step:\" , x , \"acf:\" , residuals_acf[x])"
    ]
   },
@@ -420,22 +412,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 114,
    "id": "11238022",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([-1.16100351-0.33247315j, -1.16100351+0.33247315j,\n",
-       "       -0.79647148-0.86720317j, -0.79647148+0.86720317j,\n",
-       "       -0.19878443-1.09470277j, -0.19878443+1.09470277j,\n",
-       "        0.3954237 -1.05497516j,  0.3954237 +1.05497516j,\n",
-       "        0.8729338 -0.70069561j,  0.8729338 +0.70069561j,\n",
-       "        1.0876288 -0.j        ,  1.4344947 -0.j        ])"
+       "array([-1.12343508-0.30957631j, -1.12343508+0.30957631j,\n",
+       "       -0.80073488-0.83413193j, -0.80073488+0.83413193j,\n",
+       "       -0.21516121-1.09311785j, -0.21516121+1.09311785j,\n",
+       "        0.39163807-1.07249688j,  0.39163807+1.07249688j,\n",
+       "        0.895318  -0.70413324j,  0.895318  +0.70413324j,\n",
+       "        1.07429245-0.j        ,  1.76585854-0.j        ])"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,28 +440,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 115,
    "id": "ba53e893",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[np.float64(1.2076702977201057),\n",
-       " np.float64(1.2076702977201057),\n",
-       " np.float64(1.177458346642671),\n",
-       " np.float64(1.177458346642671),\n",
-       " np.float64(1.1126047869433127),\n",
-       " np.float64(1.1126047869433127),\n",
-       " np.float64(1.1266465716725678),\n",
-       " np.float64(1.1266465716725678),\n",
-       " np.float64(1.1193693550825075),\n",
-       " np.float64(1.1193693550825075),\n",
-       " np.float64(1.087628798553457),\n",
-       " np.float64(1.434494700470688)]"
+       "[np.float64(1.1653084874633557),\n",
+       " np.float64(1.1653084874633557),\n",
+       " np.float64(1.1562665943671575),\n",
+       " np.float64(1.1562665943671575),\n",
+       " np.float64(1.1140919971095353),\n",
+       " np.float64(1.1140919971095353),\n",
+       " np.float64(1.141766147839997),\n",
+       " np.float64(1.141766147839997),\n",
+       " np.float64(1.1390337778019375),\n",
+       " np.float64(1.1390337778019375),\n",
+       " np.float64(1.0742924473290953),\n",
+       " np.float64(1.7658585373722713)]"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
